syntax = "proto3";

package bytebase.store;

option go_package = "generated-go/store";

// Used internally for obfuscating the page token.
message PageToken {
  int32 limit = 1;
  int32 offset = 2;
}

enum Engine {
  ENGINE_UNSPECIFIED = 0;
  CLICKHOUSE = 1;
  MYSQL = 2;
  POSTGRES = 3;
  SNOWFLAKE = 4;
  SQLITE = 5;
  TIDB = 6;
  MONGODB = 7;
  REDIS = 8;
  ORACLE = 9;
  SPANNER = 10;
  MSSQL = 11;
  REDSHIFT = 12;
  MARIADB = 13;
  OCEANBASE = 14;
  DM = 15;
  RISINGWAVE = 16;
  OCEANBASE_ORACLE = 17;
  STARROCKS = 18;
  DORIS = 19;
  HIVE = 20;
  ELASTICSEARCH = 21;
  BIGQUERY = 22;
  DYNAMODB = 23;
  DATABRICKS = 24;
  COCKROACHDB = 25;
  COSMOSDB = 26;
}

enum VCSType {
  VCS_TYPE_UNSPECIFIED = 0;
  // GitHub type. Using for GitHub community edition(ce).
  GITHUB = 1;
  // GitLab type. Using for GitLab community edition(ce) and enterprise
  // edition(ee).
  GITLAB = 2;
  // BitBucket type. Using for BitBucket cloud or BitBucket server.
  BITBUCKET = 3;
  // Azure DevOps. Using for Azure DevOps GitOps workflow.
  AZURE_DEVOPS = 4;
}

enum MaskingLevel {
  MASKING_LEVEL_UNSPECIFIED = 0;
  NONE = 1;
  PARTIAL = 2;
  FULL = 3;
}

enum ExportFormat {
  FORMAT_UNSPECIFIED = 0;
  CSV = 1;
  JSON = 2;
  SQL = 3;
  XLSX = 4;
}

message Position {
  int32 line = 1;
  int32 column = 2;
}

message Range {
  int32 start = 1;
  int32 end = 2;
}

message DatabaseLabel {
  string key = 1;
  string value = 2;
}
